--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,5 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/* CSS url as a string */
+@import "https://js.arcgis.com/4.28/@arcgis/core/assets/esri/themes/light/main.css";
